--- a/scripts/siamese2c_notebook_5-10shot-t1.ipynb
+++ b/scripts/siamese2c_notebook_5-10shot-t1.ipynb
@@ -387,7 +387,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "40/40 [==============================] - ETA: 0s - loss: 0.1344 - accuracy: 0.9250"
+      "40/40 [==============================] - ETA: 0s - loss: 0.1344 - accuracy: 0.9250\n",
+      "Epoch 00019: val_loss did not improve from 0.19889\n",
+      "40/40 [==============================] - 238s 6s/step - loss: 0.1344 - accuracy: 0.9250 - val_loss: 0.1994 - val_accuracy: 0.6896 - lr: 2.0000e-05\n",
+      "Epoch 20/175\n",
+      "40/40 [==============================] - ETA: 0s - loss: 0.1341 - accuracy: 0.9250\n",
+      "Epoch 00020: val_loss did not improve from 0.19889\n",
+      "40/40 [==============================] - 227s 6s/step - loss: 0.1341 - accuracy: 0.9250 - val_loss: 0.2019 - val_accuracy: 0.6850 - lr: 2.0000e-05\n",
+      "Epoch 21/175\n",
+      "40/40 [==============================] - ETA: 0s - loss: 0.1338 - accuracy: 0.9250"
      ]
     }
    ],
