--- a/scripts/siamese2c_notebook_2-20shot-t1.ipynb
+++ b/scripts/siamese2c_notebook_2-20shot-t1.ipynb
@@ -309,7 +309,27 @@
       "Non-trainable params: 14,723,906\n",
       "__________________________________________________________________________________________________\n",
       "Epoch 1/175\n",
-      "80/80 [==============================] - ETA: 0s - loss: 0.2198 - accuracy: 0.5750"
+      "80/80 [==============================] - ETA: 0s - loss: 0.2198 - accuracy: 0.5750\n",
+      "Epoch 00001: val_loss improved from inf to 0.23568, saving model to ..\\scripts\\models_h5\\siamese_network2c-t1_20notebook.h5\n",
+      "80/80 [==============================] - 223s 3s/step - loss: 0.2198 - accuracy: 0.5750 - val_loss: 0.2357 - val_accuracy: 0.5733 - lr: 1.0000e-04\n",
+      "Epoch 2/175\n",
+      "80/80 [==============================] - ETA: 0s - loss: 0.2022 - accuracy: 0.7000\n",
+      "Epoch 00002: val_loss improved from 0.23568 to 0.22554, saving model to ..\\scripts\\models_h5\\siamese_network2c-t1_20notebook.h5\n",
+      "80/80 [==============================] - 223s 3s/step - loss: 0.2022 - accuracy: 0.7000 - val_loss: 0.2255 - val_accuracy: 0.6129 - lr: 1.0000e-04\n",
+      "Epoch 3/175\n",
+      "80/80 [==============================] - ETA: 0s - loss: 0.1901 - accuracy: 0.7000\n",
+      "Epoch 00003: val_loss improved from 0.22554 to 0.21883, saving model to ..\\scripts\\models_h5\\siamese_network2c-t1_20notebook.h5\n",
+      "80/80 [==============================] - 210s 3s/step - loss: 0.1901 - accuracy: 0.7000 - val_loss: 0.2188 - val_accuracy: 0.6371 - lr: 1.0000e-04\n",
+      "Epoch 4/175\n",
+      "80/80 [==============================] - ETA: 0s - loss: 0.1821 - accuracy: 0.7250\n",
+      "Epoch 00004: val_loss improved from 0.21883 to 0.21375, saving model to ..\\scripts\\models_h5\\siamese_network2c-t1_20notebook.h5\n",
+      "80/80 [==============================] - 213s 3s/step - loss: 0.1821 - accuracy: 0.7250 - val_loss: 0.2138 - val_accuracy: 0.6538 - lr: 1.0000e-04\n",
+      "Epoch 5/175\n",
+      "80/80 [==============================] - ETA: 0s - loss: 0.1765 - accuracy: 0.7375\n",
+      "Epoch 00005: val_loss improved from 0.21375 to 0.21050, saving model to ..\\scripts\\models_h5\\siamese_network2c-t1_20notebook.h5\n",
+      "80/80 [==============================] - 206s 3s/step - loss: 0.1765 - accuracy: 0.7375 - val_loss: 0.2105 - val_accuracy: 0.6633 - lr: 1.0000e-04\n",
+      "Epoch 6/175\n",
+      "80/80 [==============================] - ETA: 0s - loss: 0.1722 - accuracy: 0.7500"
      ]
     }
    ],
